src/objects/Comission_partner__c.object
<CustomObject>
    <fields>
        <fullName>Comission_Amount__c</fullName>
        <label>Comission Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comission partners</relationshipLabel>
        <relationshipName>Comission_partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comission partners</relationshipLabel>
        <relationshipName>Comission_partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comission_partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comission partner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Comission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comission partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>